changement width menu

--- a/style.css
+++ b/style.css
@@ -204,33 +204,47 @@ h3{
 
 
 
-.foot p{
+
+.footer p{
     font-family:"Shrikhand",cursive;
     color: white;
     margin-left: 40px;
-    margin-top: 0px;
-    
+    margin-top: 0;
 } 
-.foot{
-    
+.footer {
     background-color:#353535;    
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    height: 10rem;
 }
-.foot li{
+.title-footer {
+    color: #fff;
+    font-size: 1.1em;
+}
+.list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.footer li{
     padding: 5px;
     color: white;
     list-style-type: none;
     
 }
-.foot ul{
+.footer ul{
     margin: 0;
 }
 .fa-utensils{
     color: white;
     opacity: 1;
+    margin-right: 3px;
 }
 .fa-hands-helping{
     color: white;
     opacity: 1;
+    margin-right: 3px;
 }
 
 @media (max-width: 768px){
@@ -268,14 +282,18 @@ h3{
        width: 100%;
        height: 6rem;
   }
-  .foot{
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
+  .footer{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    
   }
-  .foot p{
-      display: flex;
-      flex-direction: column;
+  .titlefooter{
+    color: white;  
+    font-family: "shrikhand";
+  }
+  .list{
+     flex-direction: column;
   }
   }
 
