--- a/style2.css
+++ b/style2.css
@@ -46,6 +46,8 @@ h3{
 h3{
     position: relative;
     text-decoration: none;
+    left: 50px;
+    bottom: 20px;
 }
 h3::before{
     content: "";
@@ -118,8 +120,10 @@ h4{
     background-color:white;
     border-radius: 2rem;
     margin-left: 10px;
-    margin: 1rem;
+    margin: auto;
     overflow: hidden;
+    width: 80%;
+    margin-bottom: 20px;
 }
 .menudescription p {
     font-weight: 300;
@@ -191,10 +195,13 @@ h4{
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
+    height: 10rem;
+    padding: 20px;
 }
 .title-footer {
     color: #fff;
     font-size: 1.1em;
+    
 }
 .list {
     display: flex;
@@ -219,4 +226,18 @@ h4{
     color: white;
     opacity: 1;
     margin-right: 3px;
+}
+@media (max-width: 768px){
+    .footer{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        
+      }
+      .titlefooter{
+        margin-right: 10px;  
+      }
+      .list{
+         flex-direction: column;
+      }
 }
