--- a/style.css
+++ b/style.css
@@ -11,6 +11,34 @@ body {
   margin: 0px;
   font-family: "Roboto", sans-serif;
 }
+.loader{
+  position: fixed;
+  display: grid;
+  place-items: center;
+  background-color: #ffffff;
+  height: 100vh;
+  inset: 0;
+  z-index: 1;
+  opacity: 0.9;
+  animation: disappear 1s;
+  animation-delay: 2s;
+  animation-fill-mode: forwards;
+  transform-origin: top;
+}
+.loadertitle{
+  font-family: "shrikhand";
+  margin: 0;
+  font-size: 10rem;
+  
+}
+@keyframes disappear{
+  0%{
+    transform: scale(1);
+  }
+  100%{
+    transform: scale(0);
+  }
+}
 
 main .city {
   display: flex;
