--- a/style.css
+++ b/style.css
@@ -29,8 +29,10 @@ body {
   font-family: "shrikhand";
   margin: 0;
   font-size: 10rem;
+  color: rgba(255, 121, 218, 0.9) ; 
   
 }
+
 @keyframes disappear{
   0%{
     transform: scale(1);
@@ -234,7 +236,7 @@ h3 {
   opacity: 1;
 }
 
-.fas {
+.tuto .fas {
   color: grey;
 }
 
@@ -293,6 +295,30 @@ h3 {
   text-decoration: none;
   color: white;
 }
+@media (max-width: 1024px){
+  .tuto ol{
+    margin: 0;
+  }
+ .tuto h2{
+  margin-left: 2rem;
+  padding: 10px
+ }
+ .menu h2{
+  margin-left: 2rem;
+  padding: 10px
+ }
+   .menucard{
+    gap: 10px;
+    margin: 0;
+   }
+   .cardimage{
+    width: 20rem;
+   }
+   .carddescription{
+    width: 20rem;
+   }
+}
+  
 
 @media (max-width: 768px) {
   .tuto h2 {
@@ -337,9 +363,11 @@ h3 {
   .list {
     flex-direction: column;
   }
+  .loadertitle{
+    font-size: 4rem;
+  }
 }
-.div {
-  background-color: #9356DC;
-}
+
+
 
 /*# sourceMappingURL=style.css.map */
