--- a/style2.css
+++ b/style2.css
@@ -38,7 +38,7 @@ h2 {
 .titremenu{
     margin:0px;
     font-weight: 300;
-    padding-left: 25px;
+    padding-left: 100px;
     padding-bottom: 5px;
     padding-top: 35px;
     
@@ -46,7 +46,7 @@ h2 {
 .titremenu{
     position: relative;
     text-decoration: none;
-    left: 100px;
+    
     bottom: 20px;
 }
 .titremenu::before{
@@ -200,6 +200,10 @@ h4{
     transition: transform 200ms;
     margin: 40px 0;
 }
+.btn-menu:hover {
+    transform: scale(1.02);
+    opacity: 0.9;
+  }
 .menus button:hover{
         transform: scale(1.02);
         opacity: 0.9;
@@ -253,14 +257,19 @@ h4{
     text-decoration: none;
     color:white;
 }
-    
+   @media(max-width:1024px){
+    .imageresto{
+        height: 25vh;
+    }
+   } 
 @media (max-width: 768px){
     .restomain{
         width:100% ;
     }
-    .titremenu{
-        left:20px ;
+    .titremenu{ 
+        padding-left: 40px;
     }
+    
     .footer{
         display: flex;
         flex-direction: column;
